# mbed-os

targets/: targets.json5
targets/TARGET_NXP/TARGET_MCUXpresso_MCUS/: CMakeLists.txt
targets/TARGET_NXP/TARGET_MCUXpresso_MCUS/TARGET_MIMXRT102x/: CMakeLists.txt  PeripheralNames.h  PeripheralPins.c  lpm.c  mbed_overrides.c  mimxrt_clock_adjustment.c
targets/TARGET_NXP/TARGET_MCUXpresso_MCUS/TARGET_MIMXRT102x/TARGET_EVK/: CMakeLists.txt  PinNames.h  flash_api.c  flash_defines.h  fsl_flexspi_nor_boot.h  mimxrt_memory_info.h
targets/TARGET_NXP/TARGET_MCUXpresso_MCUS/TARGET_MIMXRT102x/device/: cmsis_nvic.h
targets/TARGET_RASPBERRYPI/TARGET_RP2040/: spi_api.c
targets/TARGET_STM/: USBPhy_STM32.cpp  stm_dma_utils.c
targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F429xI/TARGET_DISCO_F429ZI/: CMakeLists.txt  TargetInit.c
targets/TARGET_STM/TARGET_STM32F7/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32F7/TARGET_STM32F723xE/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32F7/TARGET_STM32F723xE/TARGET_DISCO_F723IE/: CMakeLists.txt  PeripheralPins.c  PinNames.h  TargetInit.c  system_clock.c
targets/TARGET_STM/TARGET_STM32U5/: PeripheralNames.h
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U545xE/: system_clock.c
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U575xI/: system_clock.c
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U585xI/TARGET_B_U585I_IOT02A/: CMakeLists.txt  TargetInit.c  aps6408.h  aps6408_conf.h
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U5A5xJ/: system_clock.c
targets/upload_method_cfg/: MIMXRT1020_EVK.cmake
(+3 files in other folders)
